Ajustes no projeto para build e execução
